syntax = "proto2";

option go_package = ".;domain";

package domain;

message IndexEntry {
    required string relPath = 1;
    required int64 lastModified = 2;
}
